objects/Project__c.object
<CustomObject>
   <fields>
      <fullName>Active__c</fullName>
      <defaultValue>false</defaultValue>
      <inlineHelpText>Active Project</inlineHelpText>
      <label>Active</label>
      <type>Checkbox</type>
   </fields>
   <fields>
      <fullName>Project_Details__c</fullName>
      <label>Project Details</label>
      <length>32768</length>
      <type>LongTextArea</type>
   </fields>
   <fields>
      <fullName>Project_ID__c</fullName>
      <displayFormat>ID-{0}</displayFormat>
      <label>Project ID</label>
      <type>AutoNumber</type>
   </fields>
   <label>Project</label>
   <listViews>
      <fullName>All</fullName>
      <filterScope>Everything</filterScope>
      <label>All</label>
   </listViews>
   <nameField>
      <label>Project Name</label>
      <type>Text</type>
   </nameField>
   <pluralLabel>Projects</pluralLabel>
   <sharingModel>ReadWrite</sharingModel>
</CustomObject>